--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0%;
     
     }
     h1{ font-size: 45px;}
@@ -18,3 +19,5 @@ body{
         padding: 10px 40px;
         border-radius: 5%;
     }
+    .banner{background-image: url(images/Banner\ \(2\).jpg);
+    background-repeat: no-repeat;}
