--- a/style.css
+++ b/style.css
@@ -3,11 +3,20 @@ body{
     margin: 0%;
     
     }
-    h1{ font-size: 45px;}
-    .orange{color: orange;}
-    section{display: flex;}
-    .half-width{width: 50%;
-    padding: 5%;}
+    h1{ 
+        font-size: 45px;
+    }
+    .orange{
+        color: orange;
+    }
+    section{
+        display: flex;
+        margin-bottom: 150px;
+    }
+    .half-width{
+        width: 50%;
+    padding: 5%;
+    }
     .half-width img{
         width: 80%;
     }
@@ -19,5 +28,7 @@ body{
         padding: 10px 40px;
         border-radius: 5%;
     }
-    .banner{background-image: url(images/Banner\ \(2\).jpg);
-    background-repeat: no-repeat;}
+    .banner{
+        background-image: url(images/Banner\ \(2\).jpg);
+    background-repeat: no-repeat;
+}
