--- a/style.css
+++ b/style.css
@@ -1,43 +1,79 @@
 body{
+    margin: 0;
     font-family: 'Poppins', sans-serif;
-    margin: 0%;
-    
+    .background-img{background-image: ;}
+}
+section{
+    height: 400px;
+    padding-bottom: 150px;
     }
-    h1{ 
-        font-size: 45px;
+    .background-img{background-image: url(images/Banner\ \(2\).jpg);
     }
-    .orange{
-        color: orange;
-    }
-    section{
-        display: flex;
-        margin-bottom: 150px;
-    }
-    .half-width{
-        width: 50%;
-    padding: 5%;
-    }
-    .half-width img{
-        width: 80%;
-    }
-    .link-button{
-        text-decoration: none;
-        color: snow;
-        font-weight: 700;
-        background-image: linear-gradient(orange,violet);
-        padding: 10px 40px;
-        border-radius: 5%;
-    }
-    .background{background-image: url(images/Banner\ \(2\).jpg);
-    }
-    .dream-big{
-        background-image: url(images/dream-bg.png);
-        background-repeat: no-repeat;
-        background-position: right;
-    }
-    .banner{
-        background-image: url(images/exp-bg.png);
-        background-repeat: no-repeat;
-        background-position: left;
-        background-position-y: 0%;
-    }
+.top-banner{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position-y: -30%;
+}
+.half-width{
+    width:40%;
+    float: left;
+    margin-left: 5%;
+    padding: 2%;
+}
+h1{
+    font-size: 45px;
+}
+h1 span{
+    color: red;
+}
+.half-width img{
+    width: 90%;
+}
+.anchor-button{
+    text-decoration: none;
+    background: linear-gradient(45deg, orange, violet);
+    padding: 10px 40px;
+    border-radius: 5px;
+    color: snow;
+    font-weight: 700;
+}
+p{
+    color: black;
+}
+.dream-area{
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+    background-position-y: 75%;
+
+}
+h2{
+    font-size: 32px;
+}
+.experience-area{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position-y: 14%;
+}
+.experience-area h3{
+    color: red;
+}
+
+.experience-area div{
+    box-shadow: 5px 7px 40px gray;
+    height: 80%;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, lightsalmon, tomato);
+    border-image-slice: 1;
+}
+#baby-web{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg,rgb(48,6,6),rgb(236,113,113));
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
+}
+
